[gd_scene load_steps=46 format=3 uid="uid://cumg22fw68jp7"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_8ohry"]
[ext_resource type="Resource" uid="uid://mpmu52v5pq6b" path="res://Scripts/Lamia.tres" id="2_0wnyv"]
[ext_resource type="Texture2D" uid="uid://crd8k3xljt0k3" path="res://Assets/BG/battleback4.png" id="3_3vdwx"]
[ext_resource type="FontVariation" uid="uid://cehwtw2yg7pdc" path="res://NES.tres" id="4_k6xtu"]
[ext_resource type="Texture2D" uid="uid://cy61d0ahcwq6b" path="res://Assets/Sprites/Enemy/Lizardwoman.png" id="5_xqk3p"]
[ext_resource type="AudioStream" uid="uid://t8v3qxurlkcx" path="res://Audio/SFX/noisy effect (4).wav" id="6_kraau"]
[ext_resource type="FontFile" uid="uid://bhnyl4v1ydf0o" path="res://NESCyrillic.ttf" id="6_vs83n"]
[ext_resource type="AudioStream" uid="uid://n5o2648vatsc" path="res://Audio/SFX/Whoosh 13.wav" id="7_0rcms"]
[ext_resource type="Script" path="res://Scripts/Actions.gd" id="7_m31wq"]
[ext_resource type="PackedScene" uid="uid://7pbpaipl6xhg" path="res://Scenes/cursor.tscn" id="8_dnj32"]
[ext_resource type="AudioStream" uid="uid://7k5w621yianp" path="res://Audio/SFX/Lamia/BiteCreakBloodJuicy_002.wav" id="8_h14sd"]
[ext_resource type="FontFile" uid="uid://cw8ksqql47ayn" path="res://Adventurer.ttf" id="9_m5js5"]
[ext_resource type="AudioStream" uid="uid://bu2ive12gu5x0" path="res://Audio/SFX/FireExplosion9.wav" id="9_xc7ya"]
[ext_resource type="Script" path="res://Scripts/Render.gd" id="10_qv4r2"]
[ext_resource type="AudioStream" uid="uid://gj6bl3ux5xmt" path="res://Audio/SFX/Lamia/Magic Positive 5.wav" id="10_qvkra"]
[ext_resource type="PackedScene" uid="uid://cs2k4tas2m42" path="res://Scenes/inventory_gui.tscn" id="11_2wyt6"]
[ext_resource type="AudioStream" uid="uid://ctm6xge4wgudd" path="res://Audio/SFX/Healing 19.wav" id="11_ag4a4"]
[ext_resource type="AudioStream" uid="uid://b85qmshuh0hj8" path="res://Audio/SFX/Ripping Clothes 1.wav" id="11_cwjlc"]
[ext_resource type="PackedScene" uid="uid://bv2l2sim1wevf" path="res://Scenes/shop_gui.tscn" id="12_l751s"]
[ext_resource type="Texture2D" uid="uid://cl8spd50ab23v" path="res://Assets/Sprites/Magical_Girl.png" id="13_ss31g"]
[ext_resource type="AudioStream" uid="uid://be5fhfftxvnyt" path="res://Audio/SFX/Items/electric spark burst (1).wav" id="14_22mb3"]
[ext_resource type="AudioStream" uid="uid://dgvowxkxk7qqf" path="res://Audio/SFX/gore - large metal knife muted ring - 34.wav" id="15_fe0n1"]
[ext_resource type="AudioStream" uid="uid://dcdi851i1yok3" path="res://Audio/SFX/Shield Metal 3_1.wav" id="15_rypqe"]
[ext_resource type="AudioStream" uid="uid://bfpblss1q0nit" path="res://Audio/SFX/Fire Burst 07.wav" id="17_3ccjj"]
[ext_resource type="AudioStream" uid="uid://cwgfeh7ihkncv" path="res://Audio/SFX/Bubbles 11.wav" id="18_0ojcy"]
[ext_resource type="AudioStream" uid="uid://uy5co8i0u31m" path="res://Audio/Music/Battlefield(loop)(130).wav" id="18_xvj1a"]
[ext_resource type="AudioStream" uid="uid://4syuc0d6o0ub" path="res://Audio/SFX/Simple Punch 20.wav" id="19_na6lo"]
[ext_resource type="AudioStream" uid="uid://d2jxj5tkwthf6" path="res://Audio/SFX/CLOTHING_MATERIAL_MOVEMENT_08.wav" id="20_vhh61"]
[ext_resource type="AudioStream" uid="uid://bo66iqf5nwpr3" path="res://Audio/SFX/Item Purchase (3).wav" id="21_ejpo1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gc8j"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7neg"]
bg_color = Color(0, 0.744571, 3.85046e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew0dr"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2jo0"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ybu8"]
bg_color = Color(0, 0.721569, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpa5y"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sojgh"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okp46"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1n8a"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ajha8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MagicalGirl:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gyoea"]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uhl5n"]
resource_name = "enemy_die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_v8lbn"]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2), Vector2(-2, 2), Vector2(-1, -2), Vector2(1, -2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7hyo4"]
resource_name = "player_die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicalGirl:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gwd2r"]
resource_name = "shake"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 16), Vector2(-10, 12), Vector2(10, -8), Vector2(-14, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MagicalGirl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtei2"]
_data = {
"RESET": SubResource("Animation_ajha8"),
"enemy_damaged": SubResource("Animation_gyoea"),
"enemy_die": SubResource("Animation_uhl5n"),
"mini_shake": SubResource("Animation_v8lbn"),
"player_die": SubResource("Animation_7hyo4"),
"shake": SubResource("Animation_gwd2r")
}

[node name="Battle" type="Control"]
texture_filter = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ohry")
enemy = ExtResource("2_0wnyv")

[node name="Battleback2" type="Sprite2D" parent="."]
position = Vector2(578, 330)
texture = ExtResource("3_3vdwx")

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 799.0
offset_top = 96.0
offset_right = 1656.0
offset_bottom = 1207.0
scale = Vector2(0.4, 0.4)

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
texture_filter = 2
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1gc8j")
theme_override_styles/fill = SubResource("StyleBoxFlat_d7neg")
max_value = 130.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k6xtu")
theme_override_font_sizes/font_size = 32
text = "HP: 25/50"
horizontal_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("5_xqk3p")
stretch_mode = 3

[node name="enemy_die" type="AudioStreamPlayer" parent="EnemyContainer"]
stream = ExtResource("6_kraau")

[node name="Attack SFX" type="Control" parent="EnemyContainer"]
layout_mode = 2

[node name="Light_Attack" type="AudioStreamPlayer" parent="EnemyContainer/Attack SFX"]
stream = ExtResource("7_0rcms")

[node name="Medium Attack" type="AudioStreamPlayer" parent="EnemyContainer/Attack SFX"]
stream = ExtResource("8_h14sd")

[node name="Heavy Attack" type="AudioStreamPlayer" parent="EnemyContainer/Attack SFX"]
stream = ExtResource("9_xc7ya")

[node name="Special" type="AudioStreamPlayer" parent="EnemyContainer/Attack SFX"]
stream = ExtResource("10_qvkra")

[node name="apron_destroy" type="AudioStreamPlayer" parent="EnemyContainer/Attack SFX"]
stream = ExtResource("11_cwjlc")

[node name="MagicalGirl" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 64.0
offset_top = 140.0
offset_right = 921.0
offset_bottom = 1220.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("13_ss31g")
stretch_mode = 3

[node name="player_die" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("6_kraau")

[node name="player_attack" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("15_rypqe")

[node name="player_heal" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("11_ag4a4")

[node name="player_toaster" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("14_22mb3")

[node name="player_knife" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("15_fe0n1")

[node name="player_molotov" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("17_3ccjj")

[node name="player_poison" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("18_0ojcy")

[node name="player_mitts" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("19_na6lo")

[node name="player_apron" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("20_vhh61")

[node name="item_purchase" type="AudioStreamPlayer" parent="MagicalGirl"]
stream = ExtResource("21_ejpo1")

[node name="PlayerPanel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ew0dr")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 0
offset_right = 760.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_k6xtu")
theme_override_font_sizes/font_size = 32
text = "PLAYER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
texture_filter = 1
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_m2jo0")
theme_override_styles/fill = SubResource("StyleBoxFlat_2ybu8")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_k6xtu")
text = "HP: 25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vs83n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vpa5y")
theme_override_styles/hover = SubResource("StyleBoxFlat_sojgh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okp46")
text = "ATTACK"
script = ExtResource("7_m31wq")

[node name="Item" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vs83n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vpa5y")
theme_override_styles/hover = SubResource("StyleBoxFlat_sojgh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okp46")
text = "Item"
script = ExtResource("7_m31wq")

[node name="Shop" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vs83n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vpa5y")
theme_override_styles/hover = SubResource("StyleBoxFlat_sojgh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okp46")
text = "SHOP"
script = ExtResource("7_m31wq")

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vs83n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_vpa5y")
theme_override_styles/hover = SubResource("StyleBoxFlat_sojgh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okp46")
text = "RUN"
script = ExtResource("7_m31wq")

[node name="Cursor" parent="ActionsPanel" instance=ExtResource("8_dnj32")]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 140.0
offset_bottom = 140.0
menu_parent_path = NodePath("../Actions")

[node name="Text" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u1n8a")

[node name="Label" type="Label" parent="Text"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("9_m5js5")
theme_override_font_sizes/font_size = 32
text = "Text goes here!"

[node name="Tick" type="Label" parent="Text"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -43.0
offset_right = -14.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("9_m5js5")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="ItemsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 16.0
offset_top = 160.0
offset_right = -16.0
offset_bottom = 560.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u1n8a")

[node name="CanvasLayer" type="CanvasLayer" parent="ItemsPanel"]
script = ExtResource("10_qv4r2")

[node name="Inventory_GUI" parent="ItemsPanel" instance=ExtResource("11_2wyt6")]
visible = false
layout_mode = 1
offset_left = -1.0
offset_top = 167.0
offset_right = 31.0
offset_bottom = 415.0
scale = Vector2(1, 0.8)

[node name="Shop_GUI" parent="ItemsPanel" instance=ExtResource("12_l751s")]
visible = false
layout_mode = 1
offset_left = -1.0
offset_top = -159.0
offset_right = 1151.0
offset_bottom = 489.0
scale = Vector2(1, 0.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mtei2")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CursorBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_xvj1a")
volume_db = -10.0
autoplay = true

[connection signal="cursor_selected" from="ActionsPanel/Actions/Attack" to="." method="_on_attack_cursor_selected"]
[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Item" to="." method="_on_item_cursor_selected"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Item" to="ItemsPanel/CanvasLayer" method="_on_item_cursor_selected"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Item" to="ItemsPanel/Inventory_GUI" method="_on_item_cursor_selected"]
[connection signal="pressed" from="ActionsPanel/Actions/Item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Item" to="ItemsPanel/CanvasLayer" method="_on_item_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Item" to="ItemsPanel/Inventory_GUI" method="_on_item_pressed"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Shop" to="." method="_on_shop_cursor_selected"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Shop" to="ItemsPanel/CanvasLayer" method="_on_shop_cursor_selected"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Shop" to="ItemsPanel/Shop_GUI" method="_on_shop_cursor_selected"]
[connection signal="pressed" from="ActionsPanel/Actions/Shop" to="ItemsPanel/CanvasLayer" method="_on_shop_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Shop" to="ItemsPanel/Shop_GUI" method="_on_shop_pressed"]
[connection signal="cursor_selected" from="ActionsPanel/Actions/Run" to="." method="_on_run_cursor_selected"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_run_pressed"]
[connection signal="closed" from="ItemsPanel/Inventory_GUI" to="." method="_on_inventory_gui_closed"]
[connection signal="is_full" from="ItemsPanel/Inventory_GUI" to="ItemsPanel/Shop_GUI" method="_on_inventory_gui_is_full"]
[connection signal="item_used" from="ItemsPanel/Inventory_GUI" to="." method="_on_inventory_gui_item_used"]
[connection signal="not_full" from="ItemsPanel/Inventory_GUI" to="ItemsPanel/Shop_GUI" method="_on_inventory_gui_not_full"]
[connection signal="opened" from="ItemsPanel/Inventory_GUI" to="." method="_on_inventory_gui_opened"]
[connection signal="add_apron" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_apron"]
[connection signal="add_cupcake" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_cupcake"]
[connection signal="add_knife" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_knife"]
[connection signal="add_mitts" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_mitts"]
[connection signal="add_molotov" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_molotov"]
[connection signal="add_poison" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_poison"]
[connection signal="add_spice" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_spice"]
[connection signal="add_toaster" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_add_toaster"]
[connection signal="closed" from="ItemsPanel/Shop_GUI" to="." method="_on_shop_gui_closed"]
[connection signal="closed" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_closed"]
[connection signal="opened" from="ItemsPanel/Shop_GUI" to="." method="_on_shop_gui_opened"]
[connection signal="opened" from="ItemsPanel/Shop_GUI" to="ItemsPanel/Inventory_GUI" method="_on_shop_gui_opened"]
[connection signal="timeout" from="CursorBuffer" to="." method="_on_cursor_buffer_timeout"]
